--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 #db
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.url=jdbc:h2:tcp://192.168.0.8/~/test
 
 #jpa
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
